--- a/config/database.yml
+++ b/config/database.yml
@@ -24,7 +24,8 @@ default: &default
 development:
   <<: *default
   database: fiszker_development
-
+  username: postgres
+  password: <%= ENV['FISZKER_DATABASE_PASSWORD'] %>
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
   # When left blank, postgres will use the default role. This is
@@ -58,7 +59,8 @@ development:
 test:
   <<: *default
   database: fiszker_test
-
+  username: postgres
+  password: <%= ENV['FISZKER_DATABASE_PASSWORD'] %>
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
 # ever seen by anyone, they now have access to your database.
@@ -81,5 +83,5 @@ test:
 production:
   <<: *default
   database: fiszker_production
-  username: fiszker
+  username: postgres
   password: <%= ENV['FISZKER_DATABASE_PASSWORD'] %>
